SailScores.Web/scss/custom.scss
/* ... */
@media (max-width: 767.98px) {
  .form-control {
    padding-left: 0.25rem;
    padding-right: 0.25rem;
  }
}

@media (min-width: 576px) {
    .score-row:not(:last-child) {
        border-bottom: 1px solid;
    }
}
/* Secondary rows: border except last on xs screens */
@media (max-width: 575.98px) {
    .score-row-secondary:not(:last-child) {
        border-bottom: 1px solid $border-color;
    }

    .score-row {
        border-bottom: 1px none $border-color;
    }
}

/* System Alert Banner Styles */
.system-alert {
    margin-bottom: 0;
    border-radius: 0;
    border-left: 0;
    border-right: 0;
}

.system-alert .container-lg {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.system-alert .btn-close {
    margin-left: 1rem;
}

